infra/games-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: games
spec:
  replicas: 1
  selector:
    matchLabels:
      app: games
  template:
    metadata:
      labels:
        app: games
    spec:
      containers:
        - name: games
          image: localhost/games:v1
          ports:
            - containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: games
spec:
  selector:
    app: games
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
