infra/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: games-ingress
  annotations:
    appgw.ingress.kubernetes.io/cookie-based-affinity: "true"
    nginx.ingress.kubernetes.io/proxy-buffering: "on"
    nginx.ingress.kubernetes.io/proxy-buffer-size: "128k"
    nginx.ingress.kubernetes.io/proxy-buffers-number: "4"
spec:
  tls:
    - hosts:
        - auth.games.com
  rules:
    - host: auth.games.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: keycloak
                port:
                  number: 8080
    - host: games.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: games
                port:
                  number: 8080
